fix: main overflow

--- a/src/css/basic_preset.css
+++ b/src/css/basic_preset.css
@@ -17,7 +17,7 @@ code {
 main {
     padding-top: 50px;
     background-color: white;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 .container {
